[package]
name = "applications"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
resolver = "2"

[dependencies]
anyhow = "1.0.71"
iced = { version = "0.9.0", features = ["tokio"] }
iced_futures = { version = "0.6.0", features = ["tokio"] }
reqwest = { version = "0.11.18", features = ["json"]}
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
